--- a/readme.org
+++ b/readme.org
@@ -179,52 +179,82 @@ function. List of divisors is unordered.
 * Arithmetical functions
 
 Arithmetical function is an any function which accept natural number
-and return complex number $f: \mathbf N \to \mathbf C$. I mainly works
+and return complex number $f: \mathbf N \to \mathbf C$. The library mostly works
 with functions which also returns integer $f: \mathbf N \to \mathbf Z$.
 
 * Function equality
 
 Two arithmetical function $f$ and $g$ are equal if $f(n)=g(n)$ for all
-natual $n$. There is helper function ~f=~ which compare two
-functions on some subset of natual numbers. Function ~f=~ accept
-two functions and subset of natural numbers. There is a default for
-subset of natural numbers, currently it is ~range(1,100)~.
+natual $n$. There is helper function ~f-equlas~ which compare two
+functions on some sequence of natual numbers. Function ~f-equals~
+accept two functions and sequence of natural numbers. There is a
+default for sequence of natural numbers, it is a variable
+~default-natural-sample~, which is currently ~range(1,100)~.
 
 If we like identify does two function ~f~ and ~g~ equals on some
-subset of natural number we can for example do next:
+sequence of natural number we can for example do next:
 
 #+begin_src clojure :results silent
-  (nt/f= f g)
-  (nt/f= f g (range 1 1000))
-  (nt/f= f g (filter even? (range 1 100)))
+  ;; Let we have some f and g
+  (def f identity)
+  (def g (constantly 1))
+  ;; Then we able to check does those functions are equals
+  (nt/f-equals f g)
+  (nt/f-equals f g (range 1 1000))
+  (nt/f-equals f g (filter even? (range 1 100)))
 #+end_src
+
+* Additive functions
+
+Additive function is a function for which
+
+$$ f(mn) = f(m) + f(n)$$
+
+if $m$ relatively prime to $n$. If equality holds for all natural
+$m$ and $n$ function called completely additive.
+
+To define an additive function it is enough to define how to
+calculate a function on power of primes.
+
+$$ f(n) = \sum_{i=1}^{k} f({p_i}^{a_i}) $$
 
 
 * Multiplicative functions
 
-Important class of arithmetical functions consists multiplicative functions.
-Multiplicative function is a function for which 
+Multiplicative function is a function not equal to zero for all n
+for which 
 
-$$ f(mn) = f(m)f(n) \quad \text{if } m \text{ relatively prime to } n $$
+$$ f(mn) = f(m)f(n) $$
+
+if $m$ relatively prime to $n$. If equality holds for all natural
+$m$ and $n$ function called completely multiplicative.
 
 To define multiplicative function it is enough to define how to
 calculate a function on power of primes.
 
 $$ f(n) = \prod_{i=1}^{k} f({p_i}^{a_i}) $$
 
-There is higher order functions ~multiplicative-function~ which accept
-function to calculate multiplicative function on power of primes and
-return function defined for all natural numbers.
+* Higher order function for define multiplicative and additive functions
+
+As we have seen, to define either multiplicative or additive function
+it is enough define function on power of a prime.  There is helper
+function ~reduce-on-prime-count~ which provide a way to define a
+function on power of a prime. The first parameter of
+~reduce-on-prime-count~ is reduce function which usually ~*~ for
+multiplicative function and usually ~+~ for additive function and some
+custom function also acceptable.
 
 For instance, we can define function which calculate number of
-divisors of integer ~n~. Count of divisors of number ~n~ can be
-calculated by formula
+divisors of integer ~n~. If $n = p_1 \dots p_k$ count of divisors of
+number ~n~ can be calculated by formula
 
 $$ \sigma_0(n) = \prod_{i=1}^{k} (a_i + 1) $$
 
+With helper function it can be defined as
+
 #+begin_src clojure :results silent 
   (def my-divisors-count
-  (nt/multiplicative-function (fn [p k] (inc k))))
+  (nt/reduce-on-prime-count * (fn [p k] (inc k))))
 #+end_src
 
 #+begin_src clojure :results pp :exports both
@@ -237,6 +267,13 @@ $$ \sigma_0(n) = \prod_{i=1}^{k} (a_i + 1) $$
 
 Of course there is predefined function ~disvisors-count~, but it
 is an example how to define custom function.
+
+* Some additive functions
+
+** Count of ditinct primes - $\omega$
+
+** Total count of primes - $\Omega$
+
 
 * Some multiplicative functions
 
@@ -372,6 +409,16 @@ accept ~x~ and return appropriate function.
 #+begin_src clojure :results silent
   (def my-divisors-square-sum (nt/divisors-sum-x 2))
 #+end_src
+
+** Liouville - $\lambda$
+
+
+* Some other arithmetic functions
+
+** Mangoldt - $\Lambda$
+
+** Chbyshev functions $\theta$ and $\psi$
+
 
 
 * Dirichlet convolution
