--- a/readme.org
+++ b/readme.org
@@ -3,19 +3,20 @@
 
 * About
 
-Number theory with Clojure. This project cover some topics in number
-theory, especially arithmetic functions, further more multiplicative
-functions. There are set of well known multiplicative functions and
-one can define custom multiplicative functions.
+This project cover some topics in number theory, especially arithmetic
+functions, further more multiplicative functions. There are set of
+well known arithmetic functions and one can define custom arithmetic
+functions.
 
 I wrote this document with Emacs Org Mode. Then I generated markdown
-file to show it nicely on github. I use Emacs babel to produce real
-output inside the document.
+file with =pandoc= to show it nicely on github. I use Emacs babel to
+produce real output inside the document.
 
 In this document I load number theory package as: 
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory :as nt])
+  (require '[clojure.math :as math])
 #+end_src
 
 So below I will use ~nt~ alias.
@@ -23,36 +24,30 @@ So below I will use ~nt~ alias.
 * Notation
 
 $\mathbf N$ - Natural numbers, positive integers $1,2,3,\dots$
-
 $\mathbf C$ - Complex numbers
 $\mathbf Z$ - Integers $\dots -3, -2, -1, 0, 1, 2, 3, \dots$
-
-If $n \in \mathbf N$ there is canonical representation of $n$ 
-$$
-\[
-n = {p_1}^{a_1} {p_2}^{a_2} \dots {p_k}^{a_k} = \prod_{i=1}^{k} {p_i}^{a_i} = \prod_{p | n} {p^a}
-\]
-$$
 
 * Performance and cache
 
 This library is designed to work with realtive small integers. Library
-keep in cache least divisor table for fast integer factorization.
-Cache grows automatically. The strategy of growing is round required
-number to the nearest power of ~10~. For instance, if client asked to
-factorize number ~18~, cache grows to ~100~, if client asked to factorize
-number ~343~, cache grows to ~1000~, etc. List of primes also cached and
-recalculated together with least divisor table. Recalculation is not
-incremental, but every recalculation of least divisor table make a
-table which is in ~10~ times more than previous, and time for previous
-calculation is ~10~ times less than for new one. So we can say that the
-library spent almost all time for latest least divisor table.
+keep in cache least prime divisor table for fast integer
+factorization.  Cache grows automatically. The strategy of growing is
+extends cache to the least power of ~10~ more than required
+number. For instance, if client asked to factorize number ~18~, cache
+grows to ~100~, if client asked to factorize number ~343~, cache grows
+to ~1000~. List of primes also cached and recalculated together
+with least prime divisor table. Recalculation is not incremental, but
+every recalculation of least prime divisor table make a table which is
+in ~10~ times more than previous, and time for previous calculation is
+~10~ times less than for new one. So we can say that recalculation
+spent almost all time for recalculate latest least prime divisor
+table.
 
-Internally, least divisor table is java array of int, so to store
-least divisor table for first ~10 000 000~ number approximately ~40M~
+Internally, least prime divisor table is java array of int, so to store
+least divisor table for first ~1 000 000~ number approximately ~4M~
 memory is required, ~4~ bytes per number.
 
-To free memory cache can be reset
+Cache can be reset:
 
 #+begin_src clojure :results pp :exports both
   (nt/ldt-reset!)
@@ -62,12 +57,12 @@ To free memory cache can be reset
 : {:least-divisor-table , :primes , :upper 0}
 : 
 
-Least divisor table is implementation details, but one can see it
+Least prime divisor table is implementation details, but one can see
+it:
 
 #+begin_src clojure :results pp :exports both
-  (nt/ldt-factorize 5); load first 10
+  (nt/integer->factors-map 5); load first 10 natural numbers
   @ldt
-
 #+end_src
 
 #+RESULTS:
@@ -76,10 +71,13 @@ Least divisor table is implementation details, but one can see it
 :  :upper 10}
 : 
 
+For instance, for get least prime divisor of number 6 we need to get
+element with index 6, which is 2. Index zero is not used, value for
+index 1 is 1.
+
 * Prime numbers
 
-There is ~primes~ functions which returns prime numbers which not
-exceeds given ~n~.
+~primes~ function returns prime numbers which not exceeds given ~n~.
 
 #+begin_src clojure :results pp :exports both
 (nt/primes 30)
@@ -94,38 +92,80 @@ exceeds given ~n~.
 Every integer more than $1$ can be represented uniquely as a product
 of primes.
 
+
 \[
-n = {p_1}^{a_1} {p_2}^{a_2} \dots {p_k}^{a_k} = \prod_{i=1}^{k} {p_i}^{a_i}
+n = {p_1}^{a_1} {p_2}^{a_2} \dots {p_k}^{a_k}
 \]
 
+or we can write it in more compact form:
+
+\[
+n = \prod_{i=1}^{k} {p_i}^{a_i}
+\]
+
+or even write as:
+
+$$n = \prod_{p|n} p^a$$
+
+
 If we accept that empty product is $1$ we can say that every natural
-numbers can be represent uniquely as a product of primes. For example
+number can be represent uniquely as a product of primes. For example
 $360 = 2^3 3^2 5^1$.
 
-There is a function ~factorize~ which return factorization for given
-~n~.  The result is a map for which key is a prime number and
-value is an order of prime in ~n~.
+There are some functions to factorize integers. Each of them accept
+natural number as an argument and returns factorized value. It have
+slightly different output, which may be more appropriate to different
+use cases. For each factorize function there is also inverse function,
+which accept factorized value and convert it back to integer.
 
-#+begin_src clojure :results pp :exports both
-  (nt/factorize 360)
+1-st factorization representation is ordered sequence of primes:
+
+#+begin_src clojure :results value :exports both
+  (nt/integer->factors 360)
+  (nt/factors->integer [2 2 2 3 3 5])
 #+end_src
 
 #+RESULTS:
-: {2 3, 3 2, 5 1}
-: 
+| (2 2 2 3 3 5) |
+|           360 |
 
-There is also inverse function of ~factorize~ which accept prime
-factorization and return integer.
+2-nd factorization representation is ordered sequence of primes
+splited by partitions by a prime:
 
-#+begin_src clojure :results pp :exports both
-  (nt/de-factorize {2 3, 3 2, 5 1})
+#+begin_src clojure :results value :exports both
+  (nt/integer->factors-partitions 360)
+  (nt/factors-partitions->integer [[2 2 2] [3 3] [5]])
 #+end_src
 
 #+RESULTS:
-: 360
-: 
+| ((2 2 2) (3 3) (5)) |
+|                 360 |
 
-Implementation of ~factorize~ function use least divisor table. To
+3-rd factorization representation is ordered sequence of pairs ~[p
+k]~, where ~p~ is a prime and ~k~ is a power of prime
+
+#+begin_src clojure :results value :exports both
+  (nt/integer->factors-count 360)
+  (nt/factors-count->integer [[2 3] [3 2] [5 1]])
+#+end_src
+
+#+RESULTS:
+| ([2 3] [3 2] [5 1]) |
+|                 360 |
+
+4-th factorization representation is very similar to 3-rd, but it
+is a map. And it has the same inverse function as 3-rd.
+
+#+begin_src clojure :results value :exports both
+  (nt/integer->factors-map 360)
+  (nt/factors-count->integer {2 3, 3 2, 5 1})
+#+end_src
+
+#+RESULTS:
+| {2 3, 3 2, 5 1} |
+|             360 |
+
+Implementation of factorization use least prime divisor table. To
 factorize number ~n~ it is enough to calculate least divisor table
 with size less or equals to $\sqrt n$. 
 
@@ -145,52 +185,84 @@ function. List of divisors is unordered.
 * Arithmetical functions
 
 Arithmetical function is an any function which accept natural number
-and return complex number $f: \mathbf N \to \mathbf C$. I mainly works
+and return complex number $f: \mathbf N \to \mathbf C$. The library mostly works
 with functions which also returns integer $f: \mathbf N \to \mathbf Z$.
 
 * Function equality
 
 Two arithmetical function $f$ and $g$ are equal if $f(n)=g(n)$ for all
-natual $n$. There is helper function ~f=~ which compare two
-functions on some subset of natual numbers. Function ~f=~ accept
-two functions and subset of natural numbers. There is a default for
-subset of natural numbers, currently it is ~range(1,100)~.
+natual $n$. There is helper function ~f-equlas~ which compare two
+functions on some sequence of natual numbers. Function ~f-equals~
+accept two functions and optionally sequence of natural numbers. There
+is a default for sequence of natural numbers, it is a variable
+~default-natural-sample~, which is currently ~range(1,100)~.
 
 If we like identify does two function ~f~ and ~g~ equals on some
-subset of natural number we can for example do next:
+sequence of natural number we can for example do next:
 
 #+begin_src clojure :results silent
-  (nt/f= f g)
-  (nt/f= f g (range 1 1000))
-  (nt/f= f g (filter even? (range 1 100)))
+  ;; Let we have some f and g
+  (def f identity)
+  (def g (constantly 1))
+  ;; Then we able to check does those functions are equals
+  (nt/f-equals f g)
+  (nt/f-equals f g (range 1 1000))
+  (nt/f-equals f g (filter even? (range 1 100)))
 #+end_src
+
+* Additive functions
+
+Additive function is a function for which
+
+$$ f(mn) = f(m) + f(n)$$
+
+if $m$ relatively prime to $n$. If above equality holds for all
+natural $m$ and $n$ function called completely additive.
+
+To define an additive function it is enough to define how to
+calculate a function on power of primes.
+If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then: 
+
+$$ f(n) = \sum_{i=1}^{k} f({p_i}^{a_i}) $$
 
 
 * Multiplicative functions
 
-Important class of arithmetical functions consists multiplicative functions.
-Multiplicative function is a function for which 
+Multiplicative function is a function not equal to zero for all n
+for which 
 
-$$ f(mn) = f(m)f(n) \quad \text{if } m \text{ relatively prime to } n $$
+$$ f(mn) = f(m)f(n) $$
+
+if $m$ relatively prime to $n$. If above equality holds for all
+natural $m$ and $n$ function called completely multiplicative.
 
 To define multiplicative function it is enough to define how to
-calculate a function on power of primes.
+calculate a function on power of primes. If $n = p_1^{a_1} p_2^{a_2}
+\dots p_k^{a_k}$ then:
 
 $$ f(n) = \prod_{i=1}^{k} f({p_i}^{a_i}) $$
 
-There is higher order functions ~multiplicative-function~ which accept
-function to calculate multiplicative function on power of primes and
-return function defined for all natural numbers.
+* Higher order function for define multiplicative and additive functions
+
+As we have seen, to define either multiplicative or additive function
+it is enough define function on power of a prime.  There is helper
+function ~reduce-on-prime-count~ which provide a way to define a
+function on power of a prime. The first parameter of
+~reduce-on-prime-count~ is reduce function which usually ~*~ for
+multiplicative function and usually ~+~ for additive function, but
+custom reduce function also acceptable.
 
 For instance, we can define function which calculate number of
-divisors of integer ~n~. Count of divisors of number ~n~ can be
-calculated by formula
+divisors of integer ~n~. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ count of divisors of
+number ~n~ can be calculated by formula:
 
 $$ \sigma_0(n) = \prod_{i=1}^{k} (a_i + 1) $$
 
+With helper function it can be defined as
+
 #+begin_src clojure :results silent 
   (def my-divisors-count
-  (nt/multiplicative-function (fn [p k] (inc k))))
+  (nt/reduce-on-prime-count * (fn [p k] (inc k))))
 #+end_src
 
 #+begin_src clojure :results pp :exports both
@@ -201,8 +273,38 @@ $$ \sigma_0(n) = \prod_{i=1}^{k} (a_i + 1) $$
 : 4
 : 
 
-Of course there is predefined function ~disvisors-count~, but it
+Of course there is predefined function ~divisors-count~, but it
 is an example how to define custom function.
+
+* Some additive functions
+
+** Count of distinct primes - $\omega$
+
+Count of distinct primes is a number of distinct primes which
+divides given $n$. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then $\omega = k$.
+
+#+begin_src clojure :results pp :exports both
+   (nt/primes-count-distinct (* 2 2 3))
+#+end_src
+
+#+RESULTS:
+: 2
+: 
+
+** Total count of primes - $\Omega$
+
+Total count of primes is a number of primes and power of primes
+which divides $n$. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then:
+
+$$\Omega = a_1 + a_2 + \dots + a_k$$
+
+#+begin_src clojure :results pp :exports both
+  (nt/primes-count-total (* 2 2 3))
+#+end_src
+
+#+RESULTS:
+: 3
+: 
 
 * Some multiplicative functions
 
@@ -229,8 +331,8 @@ For example, $\mu(6)=\mu(2 \cdot 3)=1$
 
 ** Euler totient function - $\phi$
 
-Euler totient function is a count of numbers relative prime to given number ~n~.
-Totient function can be calculated by formula: 
+Euler totient function  is a count of numbers relative  prime to given
+number ~n~.  Totient function can be calculated by formula:
 
 
 $$ \phi(n) = \prod_{p|n} (p^a - p^{a-1}) $$
@@ -280,10 +382,10 @@ Divisors count is number of divisors which divides given number $n$.
 
 $$ \sigma_0(n) = \sum_{d|n} 1 $$
 
-For example, number $64 has $4$ divisors, namely $1,2,3,6$, so $\sigma_0(6)=4$
+For example, number $64$ has $4$ divisors, namely $1,2,3,6$, so $\sigma_0(6)=4$
 
-#+begin_src clojure :results pp
-(nt/divisors-count 6)
+#+begin_src clojure :results pp :exports both
+  (nt/divisors-count 6)
 #+end_src
 
 #+RESULTS:
@@ -291,6 +393,7 @@ For example, number $64 has $4$ divisors, namely $1,2,3,6$, so $\sigma_0(6)=4$
 : 
 
 ** Divisors sum - $\sigma_1$
+
 
 $$ \sigma_1(n) = \sum_{d | n} d $$
 
@@ -318,7 +421,7 @@ For number 6 it is $50 = 1^2 + 2^2 + 3^2 + 6^2$
 : 50
 : 
 
-** Divisor higher order function - $\sigma_{x}$
+** Divisors higher order function - $\sigma_{x}$
 
 In general $\sigma_x$ function is a sum of x-th powers divisors of given n
 
@@ -338,6 +441,65 @@ accept ~x~ and return appropriate function.
 #+begin_src clojure :results silent
   (def my-divisors-square-sum (nt/divisors-sum-x 2))
 #+end_src
+
+** Liouville - $\lambda$
+
+Liouville function can be defind by formula:
+
+$$\lambda(n) = (-1)^{\Omega(n)}$$
+
+where [[*Total count of primes - $\Omega$][$\Omega$]] have been descibed above.
+
+#+begin_src clojure :results pp :exports both
+  (nt/liouville (* 2 3)) 
+#+end_src
+
+#+RESULTS:
+: 1
+: 
+
+* Some other arithmetic functions
+
+** Mangoldt - $\Lambda$
+
+$$\Lambda(n) = \begin{cases}
+   \log p,& \text{if $n$ is power of prime i.e. $n = p^k$} \\
+   0,& \text{otherwise} 
+\end{cases}$$
+
+For example $\Lambda(8) = \log 2$, $\Lambda(6) = 0$  
+
+#+begin_src clojure :results value :exports both
+  (nt/mangoldt 2)
+  (nt/mangoldt 6)
+#+end_src
+
+#+RESULTS:
+| 0.6931471805599453 |
+|                  0 |
+
+
+** Chebyshev functions $\theta$ and $\psi$
+
+There are two Chebyshev functions, one $\theta$ is defined as
+
+$$\theta(x) = \sum_{p \le x} \log p$$
+
+second $\psi$ defined as
+
+$$\psi = \sum_{n \le x} {\Lambda(n)} $$
+
+where [[*Mangoldt - $\Lambda$][$\Lambda$]] have been described above
+
+
+#+begin_src clojure :exports both
+  (nt/chebyshev-first 2)
+  (nt/chebyshev-second 2)
+#+end_src
+
+#+RESULTS:
+| 0.6931471805599453 |
+| 0.6931471805599453 |
 
 
 * Dirichlet convolution
@@ -359,8 +521,9 @@ Has identify
 
 $$ f * \epsilon = \epsilon * f = f $$
 
-For every $f$, which $f(1) \ne 0$ exists inverse function $f^{-1}$ such that $f * f^{-1} = \epsilon$. This
-inverse function called Dirichlet inverse and can by calculated recursively by:
+For every $f$, which $f(1) \ne 0$ exists inverse function $f^{-1}$
+such that $f * f^{-1} = \epsilon$. This inverse function called
+Dirichlet inverse and can by calculated recursively by formula:
 
 $$ f^{-1}(n) = \begin{cases}
 \frac{1}{f(1)} & \quad \text{if } n = 1  \\
@@ -373,8 +536,8 @@ $$ f^{-1}(n) = \begin{cases}
 For example, $1(n) * 1(n) = \sigma_0$
 
 #+begin_src clojure :exports both :results pp
-  (nt/f=
-     (nt/f* nt/one nt/one)
+  (nt/f-equals
+     (nt/dirichlet-convolution nt/one nt/one)
      nt/divisors-count
   )
 #+end_src
@@ -387,8 +550,8 @@ Dirichlet convolution is associative so clojure method support more than two
 function as parameter of ~f*~
 
 #+begin_src clojure :exports both :results pp
-  (nt/f=
-    (nt/f* nt/mobius nt/one nt/mobius nt/one)
+  (nt/f-equals
+    (nt/dirichlet-convolution nt/mobius nt/one nt/mobius nt/one)
     nt/unit
   )
 #+end_src
@@ -400,18 +563,13 @@ function as parameter of ~f*~
 Another example, functions $\mu(n)$ and $1(n)$ are inverse of each other
 
 #+begin_src clojure :exports both :results value
-    (nt/f= (nt/inverse nt/one) nt/mobius)
-    (nt/f= (nt/inverse nt/mobius) nt/one)
+    (nt/f-equals (nt/dirichlet-inverse nt/one) nt/mobius)
+    (nt/f-equals (nt/dirichlet-inverse nt/mobius) nt/one)
 #+end_src
 
 #+RESULTS:
-| class clojure.lang.Compiler$CompilerException |
-| class clojure.lang.Compiler$CompilerException |
+| true |
+| true |
 
 
-#+begin_src clojure :results value
-  (nt/inverse nt/mobius)
-#+end_src
 
-#+RESULTS:
-: class clojure.lang.Compiler$CompilerException
