--- a/readme.org
+++ b/readme.org
@@ -295,7 +295,7 @@ with functions which also returns integer $f: \mathbf N \to \mathbf Z$.
 
 Two arithmetical function $f$ and $g$ are equal if $f(n)=g(n)$ for all
 natual $n$. There is helper function ~f-equlas~ which compare two
-functions on some sequence of natual numbers. Function ~f-equals~
+functions on some sequence of natual numbers. Function ~f=~
 accept two functions and optionally sequence of natural numbers. There
 is a default for sequence of natural numbers, it is a variable
 ~default-natural-sample~, which is currently ~range(1,100)~.
@@ -308,9 +308,9 @@ sequence of natural number we can for example do next:
   (def f identity)
   (def g (constantly 1))
   ;; Then we able to check does those functions are equals
-  (f/f-equals f g)
-  (f/f-equals f g (range 1 1000))
-  (f/f-equals f g (filter even? (range 1 100)))
+  (f/f= f g)
+  (f/f= f g (range 1 1000))
+  (f/f= f g (filter even? (range 1 100)))
 #+end_src
 
 ** Additive functions
@@ -647,7 +647,7 @@ $$ f^{-1}(n) = \begin{cases}
 For example, $1(n) * 1(n) = \sigma_0$
 
 #+begin_src clojure
-  (f/f-equals
+  (f/f=
      (f/d-* f/one f/one)
      f/divisors-count
   )
@@ -661,7 +661,7 @@ Dirichlet convolution is associative so clojure method support more than two
 function as parameter of ~f*~
 
 #+begin_src clojure
-  (f/f-equals
+  (f/f=
     (f/d-* f/mobius f/one f/mobius f/one)
     f/unit
   )
@@ -674,7 +674,7 @@ function as parameter of ~f*~
 Another example, functions $\mu(n)$ and $1(n)$ are inverse of each other
 
 #+begin_src clojure
-  (f/f-equals (f/d-inv f/one) f/mobius)
+  (f/f= (f/d-inv f/one) f/mobius)
 #+end_src
 
 #+RESULTS[33bbf9139c179db71af6a5d185b937afad79f0f6]:
@@ -682,7 +682,7 @@ Another example, functions $\mu(n)$ and $1(n)$ are inverse of each other
 : 
   
 #+begin_src clojure
-  (f/f-equals (f/d-inv f/mobius) f/one)
+  (f/f= (f/d-inv f/mobius) f/one)
 #+end_src
 
 #+RESULTS[e17afcfeaabbc9d50d6f000814f6e2e43b7f447e]:
@@ -696,7 +696,7 @@ is $f(n) \mu(n)$(usual multiplication), for instance inverse
 of identity function, let's denote it $N(n)$ is $N(n) \mu(n)$
 
 #+begin_src clojure
-  (f/f-equals
+  (f/f=
    (f/d-* 
       #(* (identity %) (f/mobius %))
       identity
